hphp/test/quick/Xhp.php.expectf

Fatal error: XHP: %s in %s/Xhp.php on line 4
